# CLI-Tools

./: README.md
expense-tracker/: README.md  expenses.csv  tracker.py
flowrun/: README.md  pyproject.toml
flowrun/examples/: demo.yaml
flowrun/src/flowrun/: main.py
termalyze/: README.md  pyproject.toml  test.csv
termalyze/src/termalyze/: main.py
